# byrne-euclid-manim

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  manim.cfg  plan.md  pyproject.toml  research.md
.github/workflows/: lint.yml  render.yml
curriculum/: README.md  curriculum_manifest.json  demo_curriculum_enrichment.json  demo_curriculum_manifest.json  demo_curriculum_preview.yaml  euclid_to_oak.yaml  oak_geometry_data.json  oak_geometry_lesson_summaries.json  oak_geometry_thread_units.json  oak_geometry_threads.json  oak_geometry_unit_thread_slugs.json  oak_ks2_geometry_lessons.json  oak_ks2_geometry_units.json  oak_ks3_geometry_lessons.json  oak_ks3_geometry_units.json  oak_subject_maths.json  oak_threads_raw.json
docs/: challenge_teacher_guide.md  challenge_worksheet.md  curriculum_mapping.md  demo_curriculum_mapping.md  demo_curriculum_showcase.md  style_guide.md  youtube_metadata.md
references/: README.md
scripts/: build_demo_curriculum_preview.py  build_demo_reel.py  build_manifest.py  fetch_oak_curriculum.py  gif_convert.sh  render_all.py  render_one.py
src/byrne_euclid/: __init__.py  curriculum.py  definitions.py  postulates.py  propositions.py  rendering.py  style.py  utils.py
tests/: test_curriculum.py  test_demo_reel.py  test_oak_fetch.py  test_render_all.py  test_rendering.py  test_scene_catalogue.py  test_style.py  test_utils.py
